--- a/pom.xml
+++ b/pom.xml
@@ -91,17 +91,23 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- bootstrap and jquery -->
+		<!-- bootstrap and jquery and fontawesome-->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>3.3.7</version>
+			<version>4.0.0-2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>3.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>font-awesome</artifactId>
+			<version>5.11.2</version>
+		</dependency>
+
 
 	</dependencies>
 
